[package]
name = "rag-core"
version = "1.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
allocator-api2 = { version = "0.4.0", default-features = false }
arrayvec = { version = "0.7.7", default-features = false }
bitvec = { version = "1.1.1", default-features = false }
bump-scope = { version = "2.3.0", default-features = false, features = ["alloc", "allocator-api2-04"] }
chrono = { version = "0.4.45", default-features = false }
emacs = { version = "0.21.0", default-features = false }
jiff = { version = "0.2.28", default-features = false }
memchr = { version = "2.8.2", default-features = false }
quick-xml = { version = "0.40.1", default-features = false }
