[package]
name = "rag-core"
version = "2.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
allocator-api2 = { version = "0.4.0", default-features = false }
arrayvec = { version = "0.7.7", default-features = false }
bitvec = { version = "1.1.1", default-features = false }
bump-scope = { version = "2.3.0", default-features = false, features = ["alloc", "allocator-api2-04"] }
rem = { version = "1.0.0", git = "https://github.com/butterfingres/rem.git", tag = "v1.0.0", default-features = false, features = ["emacs-28"] }
jiff = { version = "0.2.28", default-features = false, features = ["std"] }
memchr = { version = "2.8.2", default-features = false }
quick-xml = { version = "0.40.1", default-features = false }
rayon-core = { version = "1.13.0", default-features = false }
crossbeam-deque = { version = "0.8.7", default-features = false }

[dev-dependencies]
test-cdylib = { version = "1.1.0", default-features = false }
