[package]
name = "rag-core-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.106", default-features = false }
quote = { version = "1.0.45", default-features = false, features = ["proc-macro"] }
syn = { version = "2.0.118", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
